# sothbot

./: .env.example  .gitignore  Cargo.toml  README.md
src/: chat_actions.rs  func.rs  main.rs  utils.rs
src/commands/: ai.rs  echo.rs  formats.rs  help.rs  joke.rs  maze.rs  meow.rs  mod.rs  start.rs  texting.rs  write_note.rs
