[package]
name = "sothbot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gemini-rust = "1.7.1"
ctor = "0.12.0"
rayon = "1.12.0"
image = "0.25.10"
rand = "0.10.1"
tokio = { version = "1.52.3", features = ["full"] }
imageproc = "0.26.2"
ab_glyph = "0.2.32"

[profile.release]
lto = true
